--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -26,5 +26,6 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^3.0.0"
-  }
+  },
+  "engines": {"node": ">=8.3.0"}
 }
