--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "mongobd": "^0.0.1-security.0",
     "mongoose": "^7.3.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "eslint": "^8.45.0",
@@ -27,5 +28,7 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^3.0.0"
   },
-  "engines": {"node": ">=8.3.0"}
+  "engines": {
+    "node": ">=8.3.0"
+  }
 }
