--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
+    "ndb": "^1.1.5",
     "prettier": "^3.0.0"
   },
   "engines": {
