--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
+    "start:prod": "SET NODE_ENV=production && nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "debug:prod": "SET NODE_ENV=production && ndb server.js",
     "debug": "ndb server.js"
   },
   "author": "me",
