added logger (winston)

--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -2,6 +2,6 @@ NODE_ENV=development
 USERNAMEINFO=testuser
 PASSWORD=bad123
 PORT=3000
-DATABASE=mongodb+srv://testuser:testpass321@clusternatoursapp.vlmm75e.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE=mongodb+srv://testuser:<PASSWORD>@clusternatoursapp.vlmm75e.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=testpass321
