--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^7.3.4",
     "morgan": "^1.9.1",
     "slugify": "^1.6.6",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "eslint": "^8.45.0",
