--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -13,6 +13,7 @@
   "author": "me",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongobd": "^0.0.1-security.0",
