--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -5,3 +5,5 @@ PORT=3000
 DATABASE=mongodb+srv://testuser:<PASSWORD>@clusternatoursapp.vlmm75e.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=testpass321
+JWT_SECRET=averylongsecretforjwtsoitissecretforeverything
+JWT_EXPIRES_IN=90d
