--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongobd": "^0.0.1-security.0",
     "mongoose": "^7.3.4",
     "morgan": "^1.9.1",
