--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -2,8 +2,8 @@ NODE_ENV=development
 USERNAMEINFO=testuser
 PASSWORD=bad123
 PORT=3000
-DATABASE2=mongodb+srv://testuser:<PASSWORD>@clusternatoursapp.vlmm75e.mongodb.net/natours?retryWrites=true&w=majority
-DATABASE=mongodb://localhost:27017/natours-test
+DATABASE=mongodb+srv://testuser:<PASSWORD>@clusternatoursapp.vlmm75e.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE2=mongodb://localhost:27017/natours-test
 DATABASE_LOCAL=mongodb://localhost:27017/natours-test
 DATABASE_PASSWORD=testpass321
 JWT_SECRET=averylongsecretforjwtsoitissecretforeverything
