--- a/4-natours/starter/config.env
+++ b/4-natours/starter/config.env
@@ -7,4 +7,4 @@ DATABASE2=mongodb://localhost:27017/natours-test
 DATABASE_LOCAL=mongodb://localhost:27017/natours-test
 DATABASE_PASSWORD=testpass321
 JWT_SECRET=averylongsecretforjwtsoitissecretforeverything
-JWT_EXPIRES_IN=9000
+JWT_EXPIRES_IN=90d
